# gitdaemon

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  README.md  clippy.toml  deny.toml  justfile  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benches/: commit_message.rs  secret_scan.rs
docs/: ai-commit-messages.md  architecture.md  config-reference.md  hooks.md  installation.md  secret-scanning.md  troubleshooting.md  user-guide.md
examples/: gd.full.yml  gd.minimal.yml
examples/hooks/: on-push-slack.sh  pre-commit-node.sh  pre-commit-rust.sh
src/: cli.rs  config.rs  errors.rs  lib.rs  ls.rs  main.rs  status.rs  watcher.rs
src/daemon/: context.rs  ipc.rs  mod.rs  pid.rs  sync_loop.rs
src/git/: ai_commit.rs  commit.rs  fetch.rs  mod.rs  push.rs  secrets.rs  squash.rs  stage.rs  sync.rs  undo.rs
tests/: integration.rs
