[package]
name = "gitdaemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gd"
path = "src/main.rs"

[lib]
name = "gitdaemon"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
notify = "6.1"
git2 = "0.19"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
nix = { version = "0.28", features = ["user", "process", "signal", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
colored = "2.1"
once_cell = "1.18"
glob = "0.3"
ignore = "0.4"
libc = "0.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dotenvy = "0.15"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
